# script-languages-release

./: .current_gitmodules  .gitattributes  .gitignore  .gitmodules  Pipfile  README.md  SECURITY.md  build_config.json  clone.sh  config  contributing.md  docker_db_config  emulator  error_code_config.yml  error_codes.yml  exaslct  exaslct_src  ext  find_duplicate_error_codes.sh  find_error_codes.sh  find_highest_error_codes_per_module.sh  find_next_error_code_per_module.sh  generate_error_codes_yml.sh  noxfile.py  pipenv_utils.sh  pyproject.toml  replace_error_codes.sh  scripts  show_code_around_error_codes.sh  show_code_arround_error_codes.sh  test_container  tests
.github/: markdown_check_config.json  pull_request_template.md
.github/ISSUE_TEMPLATE/: dependency-update.md
.github/workflows/: c4_build.yaml  check_bazel_build.yml  check_bazel_tests.yml  check_current_gitmodules.yaml  check_error_codes.yml  check_for_rebuild_branch.sh  check_for_rebuild_branch.yml  check_if_submodules_head_are_ancestors_of_origin_master.yaml  check_markdown_links.yaml  check_package_diffs.yaml  check_pull_request.sh  check_pull_request.yml  check_rollback_7.1.30_script.yml  check_version.yaml  create_aws_config.sh  create_c4_config.sh  create_ssh_key.sh  nigthly.yaml  push_docker_test_container.yaml  release_droid_upload_github_release_assets.yml  slc_cd.yml  slc_cd_flavor.yml  slc_cd_self_check.yml  slc_cd_upload_to_release.yml  slc_ci_build_slc.yml  slc_ci_check_for_build.yml  slc_ci_test_slc.yml  slc_nightly.yml  slc_nightly_flavor.yml  slc_nightly_self_check.yml  test_release.yml  update_trivy_cache.yaml  vagrant.yaml  validate_pr.yaml
aws-code-build/: DeveloperGuide.md  build_config.json  run_local  update_aws_build_stack.sh
aws-code-build/ci/: build_buildspec.yaml  buildspec.yaml
aws-code-build/release/: build_buildspec.yaml  buildspec.yaml
config/: .bcc.env  README.md  c4.yaml  ccc  pkg.sh
doc/changes/: changelog.md  changes-1.0.0.md  changes-1.0.1.md  changes-1.1.0.md  changes-1.2.0.md  changes-2.0.0.md  changes-2.1.0.md  changes-2.2.0.md  changes-2.3.0.md  changes-2.4.0.md  changes-2.5.0.md  changes-2.6.0.md  changes-20200803.md  changes-20200921.md  changes-3.0.0.md  changes-3.1.0.md  changes-3.2.0.md  changes-3.3.0.md  changes-4.0.0.md  changes-4.1.0.md  changes-4.2.0.md  changes-4.3.0.md  changes_10.0.0.md  changes_10.1.0.md  changes_10.2.0.md  changes_11.0.0.md  changes_11.1.0.md  changes_11.1.1.md  changes_11.2.0.md  changes_11.3.0.md  changes_4.3.0.md  changes_5.0.0.md  changes_6.0.0.md  changes_6.0.1.md  changes_6.1.0.md  changes_7.0.0.md  changes_7.1.0.md  changes_7.2.0.md  changes_8.0.0.md  changes_8.1.0.md  (+13 more)
doc/user_guide/: FAQ.md  how_to_rollback_slc_on_7.1.30_and_above.md  py_dataframe.md  udf_interface_requirements.md  usage.md  use_R3.6_on_7.1.30_and_above.md  use_R3_and_Python2_on_7.1.30_and_above.md  use_R3_on_7.1.30_and_above.md  user_guide.md  vagrant.md
exaudfclient/: .bazelrc  BUILD  MODULE.bazel  base  build.sh  build_local_all.sh  exaudfclient.cc  exaudfclient_base  variables.bzl
exaudfclient/extension/: .bazelrc  .gitignore  BUILD  MODULE.bazel  WORKSPACE  build.sh  build_in_container.sh  build_local.sh  build_local_all.sh  exaudfclient.cc  exaudfclient.template.sh  load_dynamic.cc
exaudfclient/extension/rcontainer/: BUILD  exascript_r_preset.R  exascript_r_wrap.R  rcontainer.cc  rcontainer.h
exaudfclient/rcontainer/: BUILD  rcontainer.cc  rcontainer.h
flavors/: FLAVORS_DOCUMENTATION.md  README.md  cpp-emit-benchmark  python-3.6-data-science-EXASOL-6.2.0  python-3.6-data-science-cuda-EXASOL-6.2.0  python-3.6-data-science-cuda-preview-EXASOL-6.2.0  python-3.6-minimal-EXASOL-6.2.0  python-3.7-minimal-EXASOL-6.2.0  python-3.8-minimal-EXASOL-6.2.0  python3-ds-EXASOL-6.0.0  python3.6-data-science-EXASOL-6.2.0  python3.6-data-science-cuda-preview-EXASOL-6.2.0  python3.6-ds-EXASOL-6.2.0  python3.6-ds-cuda-preview-EXASOL-6.1.0  python3.6-ds-cuda-preview-EXASOL-6.2.0  template-Exasol-8-python-3.10-cuda-conda  template-Exasol-8-python-3.12-cuda-conda  template-Exasol-all-java-17  template-Exasol-all-python-3.10  template-Exasol-all-python-3.10-conda  template-Exasol-all-python-3.10-cuda-conda  template-Exasol-all-python-3.12  template-Exasol-all-python-3.12-conda  template-Exasol-all-python-3.8-conda  template-Exasol-all-python-3.8-cuda-conda  test-Exasol-8-cuda-ml
flavors/docs/: py_dataframe.md
flavors/fancyr-EXASOL-6.0.0/: FLAVOR_DESCRIPTION.md
flavors/fancyr-EXASOL-6.1.0/: FLAVOR_DESCRIPTION.md
flavors/python-2.7-EXASOL-7.1.0/: FLAVOR_DESCRIPTION.md
flavors/r-3.5-data-science-EXASOL-6.2.0/: FLAVOR_DESCRIPTION.md
flavors/r-4.0-minimal-EXASOL-6.2.0/: FLAVOR_DESCRIPTION.md
flavors/standard-EXASOL-6.0.0/: FLAVOR_DESCRIPTION.md
flavors/standard-EXASOL-6.1.0/: FLAVOR_DESCRIPTION.md
flavors/standard-EXASOL-6.2.0/: FLAVOR_DESCRIPTION.md
flavors/standard-EXASOL-7.0.0/: FLAVOR_DESCRIPTION.md
flavors/standard-EXASOL-7.1.0/: FLAVOR_DESCRIPTION.md
flavors/standard-EXASOL-7.1.0-python2.7/: FLAVOR_DESCRIPTION.md
flavors/standard-EXASOL-7.1.0-without-python2.7/: FLAVOR_DESCRIPTION.md
flavors/standard-EXASOL-8.0.0/: FLAVOR_DESCRIPTION.md
flavors/standard-EXASOL-all-java-11/: FLAVOR_DESCRIPTION.md  ci.json  packages.yml
flavors/standard-EXASOL-all-java-17/: FLAVOR_DESCRIPTION.md  ci.json  packages.yml
flavors/standard-EXASOL-all-python-3.10/: FLAVOR_DESCRIPTION.md  ci.json  packages.yml
flavors/standard-EXASOL-all-python-3.12/: FLAVOR_DESCRIPTION.md  ci.json  packages.yml
flavors/standard-EXASOL-all-r-4.4/: FLAVOR_DESCRIPTION.md  ci.json  packages.yml
githooks/: install.sh  install_recursive.sh  pre-commit  pre-push  prohibit_commit_to_master.sh  update_current_submodules_file.sh
google-cloud-build/: README.md  add_new_flavor.sh  cancel_all_builds.sh  download_config.sh  github-status-notifications  run_triggers.sh  setup-scripts  setup.sh  update_triggers.sh
shared/: Dockerfile-build_deps  Dockerfile-build_deps-java17  Dockerfile-udfclient_deps
slc/: r-4-minimal-EXASOL-6.2.0_release.tar.gz.sha512sum
vagrant/: Vagrantfile
(+2878 files in other folders)
