[project]
name = "exasol-script-languages-release"
version = "9.5.2"
description = "Script Languages Release"

license = "MIT"

authors = [
    { name="Torsten Kilias", email="Torsten Kilias <torsten.kilias@exasol.com>" },
    { name="Thomas Uebensee", email="Thomas Uebensee <ext.thomas.uebensee@exasol.com>" }
]

readme = 'README.md'  # Markdown files are supported

keywords = ['exasol', 'udf', 'script-languages']

[tool.poetry]

packages = [
    {include = "README.md"},
    {include = "LICENSE"},
    {include = "exasol"},
]


[project.urls]
repository = "https://github.com/exasol/script-languages"
homepage = "https://github.com/exasol/script-languages"


[tool.poetry.dependencies]
python = ">=3.10,<4"
exasol-script-languages-container-tool = "^3.0.0"
exasol-script-languages-container-ci = "^1.8.0"
exasol-script-languages-container-ci-setup = "^1.8.0"
exasol-integration-test-docker-environment = "4.0.1"
pandas = "^2.2.2"
tabulate = "^0.9.0"
click = "^8.1.7"
docker = "!= 7.0.0"

[tool.poetry.group.dev.dependencies]
toml = ">=0.10.2"
gitpython = ">=3.1.0"
nox = ">=2022.8.7"

[build-system]
requires = ["poetry_core>=2.0.0"]
build-backend = "poetry.core.masonry.api"
