[project]
name = "exasol-script-languages-release"
version = "9.7.0"
description = "Script Languages Release"

requires-python = ">=3.10, <4.0"

license = "MIT"

authors = [
    { name="Torsten Kilias", email="Torsten Kilias <torsten.kilias@exasol.com>" },
    { name="Thomas Uebensee", email="Thomas Uebensee <ext.thomas.uebensee@exasol.com>" }
]

readme = 'README.md'  # Markdown files are supported

keywords = ['exasol', 'udf', 'script-languages']

dependencies = [
    "exasol-script-languages-container-tool (>=3.3.0, <4.0.0)",
    "exasol-script-languages-container-ci (>=3.2.0, <4.0.0)",
    "exasol-script-languages-container-ci-setup (>=3.1.0, <4.0.0)",
    "pandas (>=2.2.2, <3.0.0)",
    "tabulate (>=0.9.0, <1.0.0)",
    "click (>=8.1.7, <9.0.0)",
    "docker (!= 7.0.0)",
]

[tool.poetry]

packages = [
    {include = "README.md"},
    {include = "LICENSE"},
    {include = "exasol"},
]


[project.urls]
repository = "https://github.com/exasol/script-languages"
homepage = "https://github.com/exasol/script-languages"


[tool.poetry.group.dev.dependencies]
toml = ">=0.10.2"
gitpython = ">=3.1.0"
nox = ">=2022.8.7"

[build-system]
requires = ["poetry_core>=2.1.0"]
build-backend = "poetry.core.masonry.api"
