[project]
name = "exasol-script-languages-release"
version = "10.2.0"
description = "Script Languages Release"

requires-python = ">=3.10, <3.14"

license = "MIT"

authors = [
    { name="Torsten Kilias", email="Torsten Kilias <torsten.kilias@exasol.com>" },
    { name="Thomas Uebensee", email="Thomas Uebensee <ext.thomas.uebensee@exasol.com>" }
]

readme = 'README.md'  # Markdown files are supported

keywords = ['exasol', 'udf', 'script-languages']

dependencies = [
    "exasol-script-languages-container-tool (>=4.0.1, <5.0.0)",
    "exasol-script-languages-container-ci  @ git+https://github.com/exasol/script-languages-container-ci.git#feature/137_x86-64_arm64_build_runners",
    "exasol-script-languages-container-ci-setup  @ git+https://github.com/exasol/script-languages-container-ci-setup.git#feature/181_multi_platform_ci_workflow",
    "pandas (>=2.2.2, <3.0.0)",
    "tabulate (>=0.9.0, <1.0.0)",
    "click (>=8.1.7, <9.0.0)",
    "docker (!= 7.0.0)",
    "exasol-script-languages-package-management (>=1.0.0, <2)"
]

[tool.poetry]

requires-poetry = ">=2.3.0"

packages = [
    {include = "README.md"},
    {include = "LICENSE"},
    {include = "exasol"},
]


[project.urls]
repository = "https://github.com/exasol/script-languages"
homepage = "https://github.com/exasol/script-languages"


[dependency-groups]


dev = [
    "toml>=0.10.2",
    "gitpython>=3.1.0, <4.0.0",
    "nox>=2022.8.7"
]

[build-system]
requires = ["poetry_core>=2.1.0"]
build-backend = "poetry.core.masonry.api"
