module(name="exaudfclient_ext", version = "1.0")

bazel_dep(name = "exaudfclient", version = "1.0.0")
local_path_override(module_name="exaudfclient", path="exaudfclient_base")

new_local_repository = use_repo_rule("@bazel_tools//tools/build_defs/repo:local.bzl", "new_local_repository")

zmq_local_repository = use_repo_rule("@exaudfclient//base:zmq_repository.bzl", "zmq_local_repository")
zmq_local_repository(name = "zmq")

protobuf_local_repository = use_repo_rule("@exaudfclient//base:protobuf_repository.bzl", "protobuf_local_repository")
protobuf_local_repository(name = "protobuf")

new_local_repository(
    name = "R_linux",
    path = "/usr",
    build_file_content = """
cc_library(
    name = "r-lib",
    srcs = glob(["lib/R/lib/libR.so"]),
    hdrs = glob(["share/R/include/*/*.h","share/R/include/*.h"]),
    includes = ["share/R/include"],
    visibility = ["//visibility:public"]
)
    """
)